<resources>
    <string name="app_name">Workhere</string>

    <!-- Fields Common -->
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre</string>

    <!-- Spineer -->
    <string-array name="typesUser">
        <item>Ciudadano</item>
        <item>Empresa</item>
    </string-array>

    <!-- com.example.proyectoappnativa.Firebase -->

    <!-- com.example.proyectoappnativa.Firebase results -->
    <string name="userCreated">Usuario creado correctamente</string>
    <string name="userCreatedError">Error al crear el usuario</string>

    <!-- com.example.proyectoappnativa.Firebase logeado -->
    <string name="userLogged">Usuario logueado correctamente</string>
    <string name="userLoggedError">Error al logeado el usuario</string>

    <!-- Login -->
    <string name="textEntrar">Entrar</string>
    <string name="titleError">Error</string>
    <string name="errorLogin">Usuario o contraseña incorrectos</string>
    <string name="descriptionEmpty">Favor de llenar los campos</string>
    <string name="textOk">Aceptar</string>
    <string name="textCancel">Cancelar</string>
    <string name="textRegister">Registrarse</string>
    <string name="textLogin">Iniciar sesión</string>
    <string name="textForgot">¿Olvidaste tu contraseña?</string>
    <string name="titleLogin">Inserte sus datos.</string>
    <string name="textLoginWith">ó</string>
    <string name="textNewUser">¿No tienes una cuenta?</string>

    <!-- Reset Account -->
    <string name="textReset">Restablecer</string>
    <string name="textResetPassword">Restablecer contraseña</string>
    <string name="textResetPasswordDescription">Ingresa tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña</string>
    <string name="textResetPasswordOk">Enviar</string>
    <string name="textResetPasswordCancel">Cancelar</string>

    <!-- Register -->
    <string name="textReturn">Regresar</string>
    <string name="textHaveUser">¿Ya tienes una cuenta?</string>
    <string name="textBtnRegister">Registrarse</string>
    <string name="textDescription">Descripción</string>
    <string name="charge">Cargando</string>
    <string name="spinner">Escoge qué tipo de usuario eres</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="title_sesion">Sesión</string>
    <string name="perfil">Perfil</string>
    <string name="postulaciones">Postulaciones</string>

    <!-- Alertas -->
    <string name="textCerrarSesion">"¿Seguro que quieres cerrar sesión?"</string>
    <string name="userUpdated">"Usuario Actualizado"</string>

    <!-- Errores -->
    <string name="textErrorImagen">"Error al cargar la imagen"</string>

    <!-- KEY MAPS -->
    <string name="label_from">Dirección Origen</string>
    <string name="label_to">Dirección Destino</string>
    <string name="btn_change">Modificar</string>
    <string name="google_maps_key" translatable="false">AIzaSyC0PZVZz6Pxy74Hal64-VtZSDOyYrqTMEE</string>
    <string name="inputDirection">Ingrese la dirección</string>
    <string name="addApplications">Te has postulado</string>
    <string name="urlMaps" translatable="false"><![CDATA[https://maps.googleapis.com/maps/api/directions/json?key=AIzaSyC0PZVZz6Pxy74Hal64-VtZSDOyYrqTMEE&origin=]]></string>
    <string name="destinationMaps" translatable="false"><![CDATA[&destination=]]></string>
    <string name="accepted">Aceptados</string>
    <string name="textPhone">Teléfono</string>
    <string name="numPhone">Número de Teléfono</string>
    <string name="choose_image">Seleccionar Imagen</string>
    <string name="take_photo">Tomar Foto</string>
    <string name="work">Trabajo</string>
    <string name="To_accept">Aceptar</string>
    <string name="content">Contenido</string>
    <string name="description">Descripción</string>
    <string name="Keywords_by_commas">Palabras clave por comas</string>
    <string name="search_work">Buscar Trabajo</string>
    <string name="select_the_language">Selecciona el idioma:</string>
    <string name="spain">Español</string>
    <string name="english">Ingles</string>
    <string name="french">Frances</string>
    <string name="save">Guardar</string>
    <string name="postulation">Postulación</string>
    <string name="call">Llamar</string>
    <string name="accepted_applications">Postulaciones Aceptadas</string>
    <string name="settings">Ajustes</string>
    <string name="dont_conection">No hay conexión a internet</string>
    <string name="loginData" translatable="false">loginData</string>
    <string name="loginCounter" translatable="false">loginCounter</string>
    <string name="userId" translatable="false">userId</string>
    <string name="Users" translatable="false">Usuarios</string>
    <string name="tokenFCM" translatable="false">token</string>
    <string name="typeUser" translatable="false">typeUser</string>
    <string name="type" translatable="false">type</string>
    <string name="Account_not_exist">Esta cuenta no existe</string>
    <string name="UsuariosFirebase" translatable="false">Usuarios</string>
    <string name="PostulacionesFirebase" translatable="false">Postulaciones</string>
    <string name="FotosURL" translatable="false">Fotos/</string>
    <string name="id" translatable="false">id</string>
    <string name="image" translatable="false">image</string>
    <string name="jobCreated">Trabajo creado</string>
    <string name="emailFirebase" translatable="false">email</string>
    <string name="email_exists">El email ya existe</string>
    <string name="postulantesFirebaseField" translatable="false">postulantes</string>
    <string name="postulantesAceptedFirebase" translatable="false">postulantes_aceptados</string>
    <string name="companyFirebaseField" translatable="false">company</string>
    <string name="nameFirebaseField" translatable="false">name</string>
    <string name="descriptionFirebaseField" translatable="false">description</string>
    <string name="imageFirebaseField" translatable="false">imageURL</string>
    <string name="latitude" translatable="false">lat</string>
    <string name="longitude" translatable="false">lont</string>
    <string name="imageField" translatable="false">image</string>
    <string name="postulationUpdated">Postulación actualizada</string>
    <string name="Applied_This_Offer">Ya has postulado a esta oferta</string>
    <string name="No_connection">No tiene conexión, favor de conectarse a internet</string>
    <string name="data" translatable="false">data</string>
    <string name="title" translatable="false">Title</string>
    <string name="emptyField">Campo vacío</string>
    <string name="insertImage">Inserte una imagen</string>
    <string name="validation">Validación</string>
    <string name="invalidEmail">Email no válido</string>
    <string name="invalidPhone">Teléfono no válido</string>
    <string name="validationPassword">La contraseña tiene que ser mayor de 5 caracteres</string>
    <string name="SettingsShared" translatable="false">Settings</string>
    <string name="My_LanguagueShared" translatable="false">My_Languague</string>
    <string name="CiudadanoType" translatable="false">Ciudadano</string>
    <string name="postulationBundle" translatable="false">postulation</string>
    <string name="objectProfile" translatable="false">objectProfile</string>
    <string name="codeSpain" translatable="false">es</string>
    <string name="codeEnglish" translatable="false">en</string>
    <string name="codeFrench" translatable="false">fr</string>
    <string name="postulacionens_aceptadas" translatable="false">postulaciones_aceptadas</string>
    <string name="dont_jobExist">No existe el trabajo</string>
    <string name="dont_job_hasAccepted">Ningún trabajo te ha aceptado</string>
    <string name="routes" translatable="false">routes</string>
    <string name="legs" translatable="false">legs</string>
    <string name="steps" translatable="false">steps</string>
    <string name="polyline" translatable="false">polyline</string>
    <string name="points" translatable="false">points</string>
    <string name="dataPostulation" translatable="false">dataPostulation</string>
    <string name="idPostulation" translatable="false">idPostulation</string>
    <string name="dont_postulates">No tienes ningún postulante</string>
    <string name="jobAceptNoti">Has sido aceptado en el trabajo de  </string>
    <string name="keyFCM" translatable="false">key=AAAAlAHvnnc:APA91bEtbYrtvpxTOE5rDBgwLnQrVJKoXFVsNpl1cMoL200upzbU_kbPZpOM2LPfPT5Oew6uL-7G6B7MsvPFJzAfTzsllB26rSAdtQ0aDSwm1O1nD5o3tbNk54215OVKj5VDkzLQpe2i</string>
    <string name="notExist">No existe</string>
    <string name="permiseToCall">Favor de dar permisos de llamada</string>
    <string name="insertLatLon">Inserte las coordenadas</string>


</resources>