<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/postulaciones"
            android:icon="@drawable/ic_baseline_assignment"
            android:checked="true"/>
        <item
            android:id="@+id/nav_profile"
            android:title="@string/perfil"
            android:icon="@drawable/ic_baseline_account_circle_24"/>
    </group>

    <item android:title="@string/title_sesion">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_notification"
                    android:title="@string/cerrar_sesion"
                    android:icon="@drawable/ic_exit"/>
            </group>
        </menu>
    </item>

</menu>