<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newPostulationFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageP"
        android:layout_width="0dp"
        android:layout_height="151dp"
        android:layout_gravity="center"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:civ_border_color="@color/black"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/name"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageP">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/namePostulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_account_circle_24"
            android:fontFamily="@font/poppinsmedium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/textDescription"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionPostulation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_text"
            android:fontFamily="@font/poppinsmedium" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="335dp"
        android:layout_height="48dp"
        android:layout_marginTop="6dp"
        android:background="@android:drawable/editbox_background"
        android:drawableLeft="@drawable/ic_location"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:hint="@string/inputDirection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".MainActivity" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSavePostulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/primaryColor"
        android:elevation="5dp"
        android:src="@drawable/ic_baseline_save"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPictureWithCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/secondaryColor"
        android:elevation="5dp"
        android:src="@drawable/ic_camera"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fabSavePostulation"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPictureWithImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/secondaryLightColor"
        android:elevation="5dp"
        android:src="@drawable/ic_image"
        app:borderWidth="0dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fabPictureWithCamera"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>